services/palace-mcp/tests/extractors/fixtures/error-handling-mini-project/Sources/Bad/EmptyCatch.swift
import Foundation

enum EmptyCatchError: Error {
    case failed
}

func riskyEmptyCatch() throws {}

func emptyCatchBad() {
    do {
        try riskyEmptyCatch()
    } catch { }
}

func emptyCatchReturnBad() {
    do {
        try riskyEmptyCatch()
    } catch { return }
}
